2013-04-08 Viech
	* 20130408-1 :
	Moved starters to /opt/unvanquished/, symlinked them in /usr/bin/.

2013-02-27 Viech
	* 20130227-1 :
	Fixed git update behaviour. 

2013-01-31 Viech
	* 20130131-1 :
	Fixed a bug in systemd service file that made server startup hang.
	Added conf.d file for setting the server mode.

2013-01-29 Viech
	* 20130129-1 :
	Added systemd service file.

2012-11-05 Viech
	* 20121105-1 :
	Updated dependencies.
	Linking binarys based on architecture isn't necessary anymore.

2012-09-02 Viech
	* 20120902-1 :
	Removed world read permissions from server config files, made them group-writeable.

2012-08-03 Viech
	* 20120803-1 :
	Adopted and rewrote package.