@@ -2,7 +2,7 @@
 # Contributor: Alasdair Haswell <ali at arhaswell dot co dot uk>
 
 pkgname=apache-libcloud
-pkgver=0.12.1
+pkgver=0.13.0
 pkgrel=1
 pkgdesc="Apache Libcloud is a standard Python library that abstracts away differences among multiple cloud provider APIs"
 arch=('i686' 'x86_64')
@@ -12,7 +12,7 @@ depends=('python2')
 makedepends=('python2-distribute')
 optdepends=()
 source=(http://www.mirrorservice.org/sites/ftp.apache.org/libcloud/$pkgname-$pkgver.tar.bz2)
-sha256sums=('26cc9e13d627a58c78894e6982125ffb8418b94ab5854694e4c2f844bf1a2ca3')
+sha256sums=('e26ee90d81ed996112bfe744a0d3f33a07bcf98dd41ec01f129e1682de1ddac5')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
