@@ -5,7 +5,7 @@
 
 pkgname=eduke32
 # mind the underscore!
-pkgver=20130609_3868
+pkgver=20130630_3923
 pkgrel=1
 pkgdesc='An advanced Duke Nukem 3D source port'
 arch=('i686' 'x86_64')
@@ -21,7 +21,7 @@ conflicts=('eduke32-svn')
 source=("http://dukeworld.duke4.net/${pkgname}/synthesis/${pkgver//_/-}/${pkgname}_src_${pkgver//_/-}.tar.bz2"
         "${pkgname}.png"
         "${pkgname}.desktop")
-md5sums=('8b60a230f6649a0c21a22804d9782e27'
+md5sums=('31d9fcea5edd7b3d500e0969afb330fa'
          'bc189b860c8562e10f01e0faed909089'
          '869ad03a7f78fe1e96d1fdf6123e7dc2')
 
