@@ -8,8 +8,8 @@ arch=('i686' 'x86_64')
 url="http://code.google.com/p/gphotoframe/"
 license=('GPL3')
 groups=()
-depends=('pygtk' 'twisted' 'pyxdg' 'python-gdata')
-makedepends=('python-distutils-extra')
+depends=('pygtk' 'twisted' 'pyxdg' 'python2-gdata')
+makedepends=('python2-distutils-extra')
 optdepends=('python-simplejson' 'python-feedparser' 'python-clutter' 
 'gnome-python-desktop')
 provides=('gphotoframe')
