@@ -1,0 +1,31 @@
+# Maintainer: Bill Kolokithas <kolokithas.b@gmail.com>
+
+_gitname=j4-dmenu-desktop
+pkgname=$_gitname-git
+pkgver=28.a732349
+pkgrel=1
+pkgdesc="A rewrite of i3-dmenu-desktop, which is much faster"
+arch=('i686' 'x86_64')
+url="https://github.com/enkore/j4-dmenu-desktop"
+license=('GPL')
+depends=('dmenu')
+makedepends=('git' 'cmake')
+options=('strip')
+source=("git://github.com/enkore/j4-dmenu-desktop")
+md5sums=('SKIP')
+
+pkgver() {
+	cd $_gitname
+	echo $(git rev-list --count HEAD).$(git rev-parse --short HEAD)
+}
+
+build() {
+	cd $_gitname
+	cmake -DCMAKE_INSTALL_PREFIX=/usr .
+	make
+}
+
+package() {
+	cd $_gitname
+	make DESTDIR=$pkgdir/ install
+}
