@@ -8,7 +8,8 @@ url="http://www.eloihr.net/ksvnupdater"
 license=('GPL')
 arch=('i686' 'x86_64')
 depends=('kdebase-runtime')
-makedepends=('cmake' 'automoc4' 'pology' 'docbook-xsl')
+makedepends=('cmake' 'automoc4' 'docbook-xsl')
+depends=('pology')
 install=${pkgname}.install
 source=(http://www.eloihr.net/ksvnupdater/files/ksvnupdater-$pkgver.tar.bz2)
 md5sums=('82cb1fd54d62108d804158ad2e851375')
