@@ -109,7 +109,7 @@ prepare() {
 	msg "Patching source with ck1 including bfs v0.430"
 	patch -Np1 -i "${srcdir}/${_ckpatchname}"
 
-	if [ -n "$_pstates_ivy" ]; then
+	if [ -n "$_pstates_pat" ]; then
 		### Patch source to enable pstate drivers with ivybridge CPUs
 		### see https://plus.google.com/117091380454742934025/posts/2vEekAsG2QT
 		msg "Patching source to enable Intel Pstate driver for Ivy and Haswell CPUs"
