@@ -1,5 +1,5 @@
 pkgname=pcf2bdf-git
-pkgver=15.a22b684
+pkgver=15+ga22b684
 pkgrel=1
 pkgdesc="Convert X font from PCF to BDF"
 arch=('i686' 'x86_64')
@@ -14,7 +14,7 @@ md5sums=('SKIP')
 
 pkgver() {
 	cd "pcf2bdf"
-	echo "$(git rev-list --count HEAD).$(git rev-parse --short HEAD)"
+	echo "$(git rev-list --count HEAD)+g$(git rev-parse --short HEAD)"
 }
 
 build() {
