@@ -1,7 +1,7 @@
 # Maintainer: Christer Edwards <christer.edwards@gmail.com>
 
 pkgname=salt
-pkgver=0.15.3
+pkgver=0.16.0
 pkgrel=1
 pkgdesc="A remote execution and communication system built on zeromq"
 arch=(any)
@@ -29,7 +29,7 @@ source=("http://pypi.python.org/packages/source/s/${pkgname}/${pkgname}-${pkgver
         "salt-syndic"
         "salt-minion")
 
-md5sums=('9e9c8cc3be262252cc9acf1f41df317b'
+md5sums=('4e4f382614b8c30818be0c2ebe2988e8'
          '3a2b032ec37077363c049969105b128e'
          'e4c6adce5087e947c26c5c9d9fc3c9bb'
          '833d31ebee69f5c0e2c0b6c8d345b6d7'
