@@ -5,7 +5,7 @@
 _branch=master
 
 pkgname=unvanquished-git
-pkgver=20130408
+pkgver=20130702
 pkgrel=1
 pkgdesc="A team-based fps/rts hybrid game which pits aliens against humans. Bleeding edge version that might be too new for official servers."
 arch=('x86_64' 'i686')
@@ -29,7 +29,7 @@ md5sums=('106ef331d5889bff18fe099b2e7bbcf8'
          'd272a70f58778affeabac13cc8a880da'
          '9d576da480e18b7f7352c49e537d2005'
          'ac69d49b3c665d274d0ab58870220522'
-         '455b5f4122f9b8389dce2e7b6033d7ac')
+         '2a85d7ef2da44411f0c00608e9b9b605')
 
 _name=unvanquished
 
@@ -88,7 +88,7 @@ package() {
 	cd $srcdir/$_name
 	
 	install -m 755 daemon daemonded *.so download-pk3.sh $pkgdir/opt/$_name/
-	install -m 644 COPYING.txt GPL.txt README.txt debian/$_name.png $pkgdir/opt/$_name/
+	install -m 644 COPYING.txt GPL.txt README.md debian/$_name.png $pkgdir/opt/$_name/
 	
 	cp -pr main $pkgdir/opt/$_name/
 	chown -R root:root $pkgdir/opt/$_name/main
