@@ -1,3 +1,7 @@
+2013-07-02 Viech
+	* 20130702-1 :
+	README.txt has been renamed to README.md, update package() to reflect this.
+
 2013-04-08 Viech
 	* 20130408-1 :
 	Moved starters to /opt/unvanquished/, symlinked them in /usr/bin/.
